--- a/app/src/main/res/layout/control_vehiculos_activity.xml
+++ b/app/src/main/res/layout/control_vehiculos_activity.xml
@@ -40,6 +40,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
+        app:helperText="Formato 000000-0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appLogo">
