--- a/app/src/main/res/layout/reserva_espacios_activity.xml
+++ b/app/src/main/res/layout/reserva_espacios_activity.xml
@@ -7,16 +7,72 @@
     tools:context=".ReservaActivity">
 
     <TextView
+        android:id="@+id/textView4"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="60dp"
         android:text="Reserva"
-        android:textSize="40sp"
         android:textAlignment="center"
+        android:textSize="40sp"
+        android:fontFamily="@font/bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/booking"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintVertical_bias="0.097" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnPiscina"
+        android:layout_width="325dp"
+        android:layout_height="60dp"
+        android:backgroundTint="@color/quaternary_500"
+        android:fontFamily="@font/bold"
+        android:text="Reserva Piscina"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.526" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView3"
+        app:layout_constraintVertical_bias="0.25" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnSalaJuegos"
+        android:layout_width="325dp"
+        android:layout_height="60dp"
+        android:backgroundTint="@color/quaternary_500"
+        android:fontFamily="@font/bold"
+        android:text="Reserva Sala de Juegos"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnPiscina"
+        app:layout_constraintVertical_bias="0.143" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnTerraza"
+        android:layout_width="325dp"
+        android:layout_height="60dp"
+        android:backgroundTint="@color/quaternary_500"
+        android:fontFamily="@font/bold"
+        android:text="Reserva Sala de Juegos"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnSalaJuegos"
+        app:layout_constraintVertical_bias="0.225" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
