--- a/app/src/main/res/layout/residente_view_activity.xml
+++ b/app/src/main/res/layout/residente_view_activity.xml
@@ -9,18 +9,18 @@
 
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="104dp"
-        android:layout_height="56dp"
-        android:layout_marginTop="172dp"
+        android:id="@+id/txtNombreUsuario"
+        android:layout_width="364dp"
+        android:layout_height="290dp"
+        android:layout_marginTop="44dp"
+        android:fontFamily="@font/bold"
         android:gravity="center"
-        android:text="Hola"
         android:textAlignment="center"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.363"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnDatos"
@@ -33,12 +33,12 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/txtNombreUsuario" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnReserva"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="60dp"
         android:backgroundTint="@color/quaternary_500"
         android:fontFamily="@font/bold"
         android:text="Reserva de Espacios Comúnes"
