add activities layouts

--- a/app/src/main/res/layout/conserje_view_activity.xml
+++ b/app/src/main/res/layout/conserje_view_activity.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:padding="16dp"
-    android:background="@color/secondary_50"
+    android:background="@color/quaternary_500"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ConserjeViewActivity">
@@ -16,7 +16,7 @@
         android:fontFamily="@font/bold"
         android:text="Panel Conserje"
         android:textAlignment="center"
-        android:textColor="@color/secondary_900"
+        android:textColor="@color/primary_50"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,8 +41,9 @@
         android:id="@+id/GestionBtn"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:backgroundTint="@color/quaternary_500"
+        android:backgroundTint="@color/primary_50"
         android:fontFamily="@font/bold"
+        android:textColor="@color/secondary_900"
         android:text="Gestión de Visitas"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/ControlBtn"
@@ -55,8 +56,9 @@
         android:id="@+id/ControlBtn"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:backgroundTint="@color/quaternary_500"
+        android:backgroundTint="@color/primary_50"
         android:fontFamily="@font/bold"
+        android:textColor="@color/secondary_900"
         android:text="Control de Vehículos"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -69,8 +71,9 @@
         android:id="@+id/SearchBtn"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:backgroundTint="@color/quaternary_500"
+        android:backgroundTint="@color/primary_50"
         android:fontFamily="@font/bold"
+        android:textColor="@color/secondary_900"
         android:text="Panel de Búsqueda"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -84,8 +87,9 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginTop="75dp"
-        android:backgroundTint="@color/quaternary_500"
+        android:backgroundTint="@color/primary_50"
         android:fontFamily="@font/bold"
+        android:textColor="@color/secondary_900"
         android:text="Encomiendas"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -93,5 +97,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/SearchBtn"
         app:layout_constraintVertical_bias="0.135" />
+
+    <TextView
+        android:id="@+id/closeSesion"
+        android:layout_width="136dp"
+        android:layout_height="33dp"
+        android:clickable="true"
+        android:onClick="onTextViewClick"
+        android:text="Cerrar Sesión"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:fontFamily="@font/bold"
+        android:textColor="@color/primary_50"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.523"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/EncomiendaBtn"
+        app:layout_constraintVertical_bias="0.878" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
