--- a/app/src/main/res/layout/admin_view_activity.xml
+++ b/app/src/main/res/layout/admin_view_activity.xml
@@ -1,18 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:layout_width="104dp"
-        android:layout_height="56dp"
+        android:id="@+id/textView6"
+        android:layout_width="321dp"
+        android:layout_height="104dp"
+        android:fontFamily="@font/bold"
         android:gravity="center"
-        android:text="Admin"
+        android:text="Panel Administrador"
+        android:textColor="@color/secondary_900"
         android:textAlignment="center"
+        android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.056" />
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/admin"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
+        app:layout_constraintVertical_bias="0.145" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnControl"
+        android:layout_width="350dp"
+        android:layout_height="60dp"
+        android:backgroundTint="@color/quaternary_500"
+        android:fontFamily="@font/bold"
+        android:text="Control de Cuentas"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView7"
+        app:layout_constraintVertical_bias="0.241" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnClose"
+        android:layout_width="350dp"
+        android:layout_height="60dp"
+        android:backgroundTint="@color/quaternary_500"
+        android:fontFamily="@font/bold"
+        android:text="Cerrar Sesión"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnControl"
+        app:layout_constraintVertical_bias="0.134" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
