--- a/app/src/main/res/layout/main_register_activity.xml
+++ b/app/src/main/res/layout/main_register_activity.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:padding="16dp"
-    android:background="@color/primary_50"
+    android:background="@color/quaternary_500"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainRegisterActivity">
@@ -12,46 +12,74 @@
 
     <TextView
         android:id="@+id/appLogoImageView"
-        android:layout_width="359dp"
-        android:layout_height="93dp"
+        android:layout_width="387dp"
+        android:layout_height="183dp"
         android:layout_marginTop="24dp"
-        android:text="Conserjería"
-        android:textColor="@color/secondary_900"
         android:fontFamily="@font/bold"
+        android:text="Bienvenido a C.A.S.I"
         android:textAlignment="center"
+        android:textColor="@color/primary_50"
         android:textSize="60sp"
         app:layout_constraintBottom_toTopOf="@+id/loginButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintVertical_bias="0.411" />
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/slogan"
+        android:layout_width="377dp"
+        android:layout_height="63dp"
+        android:fontFamily="@font/bold"
+        android:text="Control de acceso a un servicio independiente"
+        android:textAlignment="center"
+        android:textColor="@color/primary_50"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.535"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appLogoImageView"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/website"
+        app:layout_constraintBottom_toTopOf="@+id/loginButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.547"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appLogoImageView"
+        app:layout_constraintVertical_bias="0.746" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/loginButton"
         android:layout_width="350dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="300dp"
-        android:text="Iniciar Sesión"
-        android:backgroundTint="@color/quaternary_500"
+        android:layout_marginBottom="136dp"
+        android:backgroundTint="@color/primary_50"
         android:fontFamily="@font/bold"
+        android:textColor="@color/secondary_900"
+        android:text="Iniciar Sesión"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/registerButton"
         android:layout_width="350dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="200dp"
-        android:text="Crear Cuenta"
+        android:layout_marginBottom="52dp"
+        android:backgroundTint="@color/secondary_900"
         android:fontFamily="@font/bold"
-        android:backgroundTint="@color/quaternary_500"
+        android:text="Crear Cuenta"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
