--- a/app/src/main/res/layout/busqueda_activity.xml
+++ b/app/src/main/res/layout/busqueda_activity.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:padding="16dp">
 
-
     <TextView
         android:id="@+id/textView5"
         android:layout_width="match_parent"
@@ -36,67 +35,52 @@
         android:id="@+id/btnResidentes"
         android:layout_width="300dp"
         android:layout_height="60dp"
+        android:layout_marginTop="50dp"
         android:backgroundTint="@color/quaternary_500"
         android:fontFamily="@font/bold"
         android:text="Buscar Residentes"
         android:textSize="18sp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView4"
-        app:layout_constraintVertical_bias="0.156" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnEncomiendas"
         android:layout_width="300dp"
         android:layout_height="60dp"
+        android:layout_marginTop="30dp"
         android:backgroundTint="@color/quaternary_500"
         android:fontFamily="@font/bold"
         android:text="Buscar Encomiendas"
         android:textSize="18sp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnResidentes"
-        app:layout_constraintVertical_bias="0.084" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnVisitas"
         android:layout_width="300dp"
         android:layout_height="60dp"
+        android:layout_marginTop="30dp"
         android:backgroundTint="@color/quaternary_500"
         android:fontFamily="@font/bold"
         android:text="Buscar Visitas"
         android:textSize="18sp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnEncomiendas"
-        app:layout_constraintVertical_bias="0.156" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnVehiculos"
         android:layout_width="300dp"
         android:layout_height="60dp"
+        android:layout_marginTop="30dp"
         android:backgroundTint="@color/quaternary_500"
         android:fontFamily="@font/bold"
         android:text="Buscar Vehículos"
         android:textSize="18sp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnVisitas"
-       />
-
-
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
