--- a/app/src/main/res/layout/busqueda_visita_activity.xml
+++ b/app/src/main/res/layout/busqueda_visita_activity.xml
@@ -7,10 +7,25 @@
     android:layout_height="match_parent"
     tools:context=".BusquedaVisitaActivity">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:text="Visitas"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:fontFamily="@font/bold"
+        android:textColor="@color/secondary_900"
+        android:textSize="40sp"
+        app:layout_constraintBottom_toTopOf="@+id/visitaListView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ListView
         android:id="@+id/visitaListView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
